--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.github.mustfun</groupId>
-	<artifactId>warning-control</artifactId>
+	<artifactId>warning-control-core</artifactId>
 	<version>1.0.1</version>
 	<packaging>jar</packaging>
 
