--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,26 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<spring.version>5.0.4.RELEASE</spring.version>
+		<springboot.version>2.0.0.RELEASE</springboot.version>
 		<slf4j.version>1.7.21</slf4j.version>
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+			<version>${springboot.version}</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<version>${springboot.version}</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
