--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.github.mustfun</groupId>
-	<artifactId>warning-control-core</artifactId>
+	<artifactId>warning-control</artifactId>
 	<version>1.0.1</version>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 
 	<name>warning-control</name>
 	<description>a active warning systems for most of web project</description>
-
 
 
 
