--- a/warning-control-core/pom.xml
+++ b/warning-control-core/pom.xml
@@ -99,7 +99,7 @@
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>jsr311-api</artifactId>
 			<version>1.1.1</version>
-			<scope>provided</scope>
+			<scope>compile</scope>
 		</dependency>
 
 	</dependencies>
