update: 加入log自定义方式

--- a/warning-control-core/pom.xml
+++ b/warning-control-core/pom.xml
@@ -80,7 +80,23 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
 			<scope>provided</scope>
+			<optional>true</optional>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.1</version>
+			<scope>provided</scope>
+			<optional>true</optional>
+		</dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+            <scope>provided</scope>
+        </dependency>
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
