--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,16 @@
 
 	<groupId>com.github.mustfun</groupId>
 	<artifactId>warning-control</artifactId>
-	<version>1.0.1</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>warning-control</name>
 	<description>a active warning systems for most of web project</description>
 
 
+	<modules>
+		<module>warning-control-core</module>
+		<module>warning-control-example</module>
+	</modules>
 
 </project>
