--- a/warning-control-core/pom.xml
+++ b/warning-control-core/pom.xml
@@ -3,9 +3,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.github.mustfun</groupId>
+	<parent>
+		<groupId>com.github.mustfun</groupId>
+		<artifactId>warning-control</artifactId>
+		<version>1.0.1-SNAPSHOT</version>
+	</parent>
+
 	<artifactId>warning-control-core</artifactId>
-	<version>1.0.1</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>warning-control-core</name>
