--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: java
 jdk:
  - oraclejdk8
 sudo: false
-script: "mvn cobertura:cobertura"
+script:
+  - mvn clean install -e
+  - mvn cobertura:cobertura
 after_success:
   - bash <(curl -s https://codecov.io/bash)
