--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,9 @@
 						<artifactId>cobertura-maven-plugin</artifactId>
 						<version>2.7</version>
 						<configuration>
+							<maxmem>256m</maxmem>
+							<!--多个module汇总报告-->
+							<aggregate>true</aggregate>
 							<formats>
 								<format>html</format>
 								<format>xml</format>
