--- a/warning-control-core/pom.xml
+++ b/warning-control-core/pom.xml
@@ -200,6 +200,22 @@
 							</execution>
 						</executions>
 					</plugin>
+
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>cobertura-maven-plugin</artifactId>
+						<version>2.7</version>
+						<configuration>
+							<maxmem>256m</maxmem>
+							<!--多个module汇总报告-->
+							<aggregate>true</aggregate>
+							<formats>
+								<format>html</format>
+								<format>xml</format>
+							</formats>
+							<check/>
+						</configuration>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
