--- a/pom.xml
+++ b/pom.xml
@@ -17,29 +17,24 @@
 		<module>warning-control-example</module>
 	</modules>
 
-	<profiles>
-		<profile>
-			<id>release</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>cobertura-maven-plugin</artifactId>
-						<version>2.7</version>
-						<configuration>
-							<maxmem>256m</maxmem>
-							<!--多个module汇总报告-->
-							<aggregate>true</aggregate>
-							<formats>
-								<format>html</format>
-								<format>xml</format>
-							</formats>
-							<check/>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+					<maxmem>256m</maxmem>
+					<!--多个module汇总报告-->
+					<aggregate>true</aggregate>
+					<formats>
+						<format>html</format>
+						<format>xml</format>
+					</formats>
+					<check/>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
 
 </project>
