--- a/pom.xml
+++ b/pom.xml
@@ -17,24 +17,25 @@
 		<module>warning-control-example</module>
 	</modules>
 
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>2.7</version>
-				<configuration>
-					<maxmem>256m</maxmem>
-					<!--多个module汇总报告-->
-					<aggregate>true</aggregate>
-					<formats>
-						<format>html</format>
-						<format>xml</format>
-					</formats>
-					<check/>
-				</configuration>
-			</plugin>
-		</plugins>
-	</reporting>
+	<!--一般会放在parent的build元素中-->
+	<build>
+		<pluginManagement>
+			<plugins>
+				<!--测试代码覆盖率插件-->
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>cobertura-maven-plugin</artifactId>
+					<version>2.7</version>
+					<configuration>
+						<formats>
+							<format>html</format>
+							<format>xml</format>
+						</formats>
+						<check />
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 
 </project>
